update pruebas de sass

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,4 @@
 @import 'theme/_variables.scss';
-@import 'functions/_mixin.scss';
+@import 'functions/_mixins.scss';
 @import 'components/_buttons.scss';
-@import 'base/_bases.scss';
+@import 'base/_base.scss';
