--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,97 @@
-body {
-  background-color: blue;
+@font-face {
+  font-family: "papafont";
+  src: url("../assets/fonts/Knockout-HTF69-FullLiteweight.otf") format("truetype");
+}
+@font-face {
+  font-family: "papafont";
+  src: url("../assets/fonts/Knockout-HTF69-FullLiteweight.otf") format("truetype");
+}
+.bigpizza .bigpizza__button {
+  text-align: center;
+  background-color: #A39D9B;
+  color: white !important;
+  border: none;
+  height: 40px;
+  width: 35px;
+  font-size: 18px;
+  outline: none;
+  border-radius: 8px;
+}
+
+.box-size__border {
+  border: 2px solid #009774;
+  border-radius: 5px;
+}
+.box-size__border .box-size__border__name {
+  font-size: 22px;
+  font-weight: 500;
+  color: #807673;
+  font-family: "papafont";
+  text-transform: uppercase;
+}
+
+.bigpizza {
+  color: #898988;
+}
+.bigpizza .bigpizza__name {
+  font-size: 22px;
+  font-weight: 500;
+  color: #807673;
+  font-family: "papafont";
+  text-transform: uppercase;
+}
+
+input[type=radio] {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+
+.pizza-count {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 36px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.pizza-count::before {
+  content: " ";
+  position: absolute;
+  top: 6px;
+  left: 0;
+  display: block;
+  width: 24px;
+  height: 24px;
+  border: 2px solid #009774;
+  border-radius: 18px;
+  z-index: -1;
+}
+
+input[type=radio]:checked + label::before {
+  background-color: #009774;
+}
+
+.headerbox {
+  text-align: center;
+}
+.headerbox .headerbox__image {
+  width: 128px;
+}
+
+.big-pizza-section__title {
+  background-color: #BB141A;
+  color: white;
+  font-size: 29px;
+  font-family: papafont;
+  text-transform: uppercase;
+}
+.big-pizza-section__title .big-pizza-section__image {
+  height: 40px;
+  width: 40px;
 }
 
 /*# sourceMappingURL=main.css.map */
